lab3/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rs-service
  namespace: lesson3
spec:
  selector:
    app: lab3
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort:32391
  type: NodePort
